<resources>
    <string name="app_name">Review</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_settings">Search settings</string>
    <string name="search_hint">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_settings">Sort by</string>
    <string name="filter_settings">Filter by</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="min">min</string>
    <string name="max">max</string>

    <string name="facebook_app_id">957936381001073</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    
    <!-- New Review Strings -->
    <string name="new_product_photo">New product photo</string>
    <string name="uploaded_product_photo">uploaded product photo</string>
    <string name="new_review_title">Title</string>
    <string name="new_title_hint">add a title to your review</string>
    <string name="new_review_category">Category</string>
    <string name="new_review_rating">Rating</string>
    <string name="new_review_rating_category_one">Category One</string>
    <string name="new_review_base_rating">0.0</string>
    <string name="new_review_rating_category_two">Category Two</string>
    <string name="new_review_rating_category_three">Category Three</string>
    <string name="new_review_review_section_heading">Review</string>
    <string name="new_review_hint">write your review here</string>
    
    <!--Spinner in newReview strings -->
    <string name="productCategory">Pick a Product Category</string>
    <string name="cancel_new_review">Cancel</string>
    <string name="publish_new_review">Publish</string>
    <string-array name="productTypes">
        <item>Phone</item>
        <item>Printer</item>
        <item>Laptops</item>
    </string-array>

    <string name="title_activity_review_article">ReviewArticleActivity</string>
    <string name="rate">Rate</string>
    <string name="comment">Comment</string>
    <string name="copy">Copy</string>
    <string name="reply">Reply</string>
</resources>
