<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/list_item_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/comment_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/comment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/inactiveText"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/comment_user"
                android:text="2 hours ago"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Nice review"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <ImageView
                android:id="@+id/comment_ic3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="2dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_stars_yellow"/>

            <TextView
                android:id="@+id/comment_score3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/comment_ic3"/>

            <ImageView
                android:id="@+id/comment_ic2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="2dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/comment_score3"
                android:src="@drawable/ic_votes_green"/>

            <TextView
                android:id="@+id/comment_score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/comment_ic2"/>

            <ImageView
                android:id="@+id/comment_ic1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="2dp"
                android:layout_toLeftOf="@id/comment_score2"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_likes_red"/>

            <TextView
                android:id="@+id/comment_score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/comment_ic1"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_rcc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/rate"
            android:id="@+id/comment_rate"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/reply"
            android:id="@+id/comment_reply"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/copy"
            android:id="@+id/comment_copy"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>