<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.review.ReviewArticleActivity"
    tools:showIn="@layout/activity_review_article">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/article_profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/article_profile_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:paddingLeft="10dp" />

            <ImageView
                android:id="@+id/ic_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/ic_edit_grey"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/white">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/article_overall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Overall"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/article_overall_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>

                <TextView
                    android:id="@+id/article_overall_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/article_attr1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Attr1"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/article_attr1_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>
                <TextView
                    android:id="@+id/article_attr1_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/article_attr2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Attr2"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/article_attr2_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>
                <TextView
                    android:id="@+id/article_attr2_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/article_attr3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Attr3"
                    android:textStyle="bold"/>
                <ProgressBar
                    android:id="@+id/article_attr3_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progressDrawable="@drawable/custom_progressbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"/>
                <TextView
                    android:id="@+id/article_attr3_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:background="#f3f3f3">

            <ImageView
                android:id="@+id/article_img1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/article_img2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/article_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#fefaf4"
            android:orientation="vertical"
            android:paddingBottom="12dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/activeText"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/article_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:textColor="@color/activeText"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/article_ic3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:src="@drawable/ic_stars_yellow" />

                <TextView
                    android:id="@+id/article_score3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toLeftOf="@id/article_ic3" />

                <ImageView
                    android:id="@+id/article_ic2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_toLeftOf="@id/article_score3"
                    android:src="@drawable/ic_votes_green" />

                <TextView
                    android:id="@+id/article_score2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toLeftOf="@id/article_ic2" />

                <ImageView
                    android:id="@+id/article_ic1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="2dp"
                    android:layout_toLeftOf="@id/article_score2"
                    android:src="@drawable/ic_likes_red" />

                <TextView
                    android:id="@+id/article_score1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/article_ic1" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/article_rcc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#e6912d"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/article_rate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />

            <TextView
                android:id="@+id/article_comment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/comment"
                android:textColor="@color/white" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/white" />

            <TextView
                android:id="@+id/article_copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal"/>
    </LinearLayout>
</ScrollView>